# tech-giants-backend

./: .gitignore  Dockerfile  Makefile  pyproject.toml
scripts/: activate.sh
src/: manage.py
src/applications/api/: serializers.py  urls.py  views.py
src/applications/common/: components.py  exception_handler.py  exceptions.py  file_uploader.py  permissions.py
src/applications/jwtauth/: authentication.py  services.py
src/applications/jwtauth/api/: serializers.py  urls.py  views.py
src/applications/members/: admin.py  apps.py  contants.py  enums.py  exceptions.py  model_permissions.py  models.py  permissions.py  services.py
src/applications/members/api/: filters.py  serializers.py  urls.py  views.py
src/applications/members/migrations/: 0001_initial.py
src/applications/ui/: apps.py  urls.py  views.py
src/applications/ui/templates/: base.html  index.html  lk.html
src/applications/ui/templates/components/: footer.html  header.html
src/fixtures/members/: admin.json  groups.json  permisisons.json
src/system/: asgi.py  local_urls.py  urls.py  wsgi.py
src/system/settings/: default.py
